# train-challenge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: checks-subflow.yaml  deploy-branch.yaml  deploy-subflow.yaml
bicep/: apim.bicep  function-app.bicep  logging.bicep  main.bicep  storage.bicep
bicep/apim-policies/: apim-all-policy.xml  apim-op-policy.xml
function-app/: function_app.py  host.json  nearest_septa.py
tests/trainchallenge/common/: test_get_nearest_point.py  test_get_next_after_match.py  test_gps_to_miles.py
trainchallenge/: __init__.py
trainchallenge/common/: __init__.py
trainchallenge/dcmetro/: __init__.py  load_data.py
trainchallenge/septa/: __init__.py  septa_api.py
